--- a/frontend/src/pages/ProfilePage.css
+++ b/frontend/src/pages/ProfilePage.css
@@ -1,7 +1,10 @@
 /* ProfilePage.css */
 
 .profile-container {
-  max-width: 960px;
+  /* max-width: 960px; */
+  max-width: 1100px;
+  width: 100%;
+  /* height: 80%; */
   background: linear-gradient(to bottom right, #c6e8fa, #9dbedc);
   margin: 0 auto;
   padding: 3rem 2rem;
