--- a/frontend/src/pages/ProfilePage.css
+++ b/frontend/src/pages/ProfilePage.css
@@ -5,7 +5,8 @@
   max-width: 1100px;
   width: 100%;
   /* height: 80%; */
-  background: linear-gradient(to bottom right, #c6e8fa, #9dbedc);
+  /* background: linear-gradient(to bottom right, #c6e8fa, #9dbedc); */
+  background: rgb(255, 255, 255);
   margin: 0 auto;
   padding: 3rem 2rem;
   color: #ffffff;
