--- a/frontend/src/pages/SmartGuide.css
+++ b/frontend/src/pages/SmartGuide.css
@@ -75,7 +75,8 @@ html, body {
 
 .smartguide-output {
   padding: 1.5rem 1.8rem;
-  background: linear-gradient(to bottom right, #bde4ff, #87d5ff);
+  /* background: linear-gradient(to bottom right, #bde4ff, #87d5ff); */
+  background: linear-gradient(to bottom right, #c6e8fa, #9dbedc);
   backdrop-filter: blur(14px);
   -webkit-backdrop-filter: blur(14px);
   border: 1px solid rgba(255, 255, 255, 0.1);
