--- a/frontend/src/pages/SmartReviews.css
+++ b/frontend/src/pages/SmartReviews.css
@@ -313,7 +313,7 @@
 }
 
 .collapse-toggle:hover span {
-  transform: rotate(180deg);
+  /* transform: rotate(180deg); */
 }
 
 /* Tooltip magic */
@@ -342,17 +342,20 @@
 
 .review-result-wrapper {
   /* overflow: hidden; */
-  overflow-x: hidden;
-  overflow-y: auto;
+  /* overflow-x: hidden;
+  overflow-y: auto; */
   /* background: red; */
   max-height: 0;
   opacity: 0;
-  transition: max-height 0.6s ease, opacity 0.6s ease;
+  transition: opacity 0.6s ease;
+  overflow: visible;
+  
 }
 
 .review-result-wrapper.expanded {
-  max-height: 800px;
+  /* max-height: 800px; */
   opacity: 1;
+  
 }
 
 .review-result {
